<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMain">

        <EditText
            android:id="@+id/inputNumbersET"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:hint="@string/hintInputNumbersET"
            android:layout_columnSpan="4"
            />

        <TextView
            android:id="@+id/resultTV"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:text="@string/textResultTV"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_columnSpan="4"/>

        <Button
            android:id="@+id/divBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDivBTN"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_column="3"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/oneBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textOneBTN"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/twoBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textTwoBTN"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/threeBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textThreeBTN"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/multBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textMultBTN"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/fourBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textFourBTN"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/fiveBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textFiveBTN"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/sixBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textSixBTN"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/diffBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDiffBTN"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/sevenBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textSevenBTN"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/eightBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textEightBTN"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/nineBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textNineBTN"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/sumBTN"
            android:layout_width="wrap_content"
            android:layout_height="150sp"
            android:text="@string/textSumBTN"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_rowSpan="3"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/zeroBTN"
            android:layout_width="175sp"
            android:layout_height="wrap_content"
            android:text="@string/textZeroBTN"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_columnSpan="2"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/resultBTN"
            android:layout_width="264sp"
            android:layout_height="wrap_content"
            android:text="@string/textResultBTN"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/resetBTN"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:text="@string/textResetBTN"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_columnSpan="4"
            android:onClick="onClick"/>


    </GridLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>